--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -16,6 +16,8 @@
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
         <Label Content="Total Charge after adding &#xA;the delivery charge ($25)" HorizontalAlignment="Left" Margin="46,209,0,0" VerticalAlignment="Top"/>
         <TextBox Name="totalChargeTextBox" HorizontalAlignment="Left" Margin="199,222,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="122" Height="24"/>
+        <Label Content="Total Charge after adding &#xA;the wrap charge ($5)" HorizontalAlignment="Left" Margin="46,260,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="wrapChargeTextBox" HorizontalAlignment="Left" Margin="199,269,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="122" Height="24"/>
 
 
     </Grid>
